[project]
name = "epstein_rag_mcp"
version = "0.1.0"
description = "MCP server providing RAG capabilities over the Epstein Files dataset"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "rag", "vector-search", "qdrant", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "datasets>=2.14.0",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "mcp>=0.9.0",
    "pandas>=2.0.0",
    "tiktoken>=0.12.0" 
]

[project.urls]
Homepage = "https://github.com/justinlime/epstein_rag_mcp"
Repository = "https://github.com/justinlime/epstein_rag_mcp"
Issues = "https://github.com/justinlime/epstein_rag_mcp/issues"

[project.scripts]
epstein_rag_mcp = "epstein_rag_mcp.server:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epstein_rag_mcp"]
